--- a/back/package.json
+++ b/back/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "lucide-react": "^0.378.0",
     "nodemon": "^3.1.0",
-    "openai": "^4.38.5"
+    "openai": "^4.38.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
