--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lucide-react": "^0.378.0",
+    "mongoose": "^8.4.0",
     "nodemon": "^3.1.0",
     "openai": "^4.38.5",
     "tailwind-merge": "^2.3.0",
